--- a/index.html
+++ b/index.html
@@ -6,14 +6,30 @@
 
 <body>
     <header>
-        <a class="nav-link" href="https://dbis-uibk.github.io/relax/calc/local/uibk/local/0" target="_blank">Simulatore RelaX</a>
+        <a class="nav-link" href="https://dbis-uibk.github.io/relax/calc/local/uibk/local/0" target="_blank">Simulatore
+            RelaX</a>
+        <a class="nav-link" href="https://www.w3schools.com/sql/trysql.asp?filename=trysql_asc">Simulatore SQL</a>
         <a class="nav-link" href="../index.html" target="_self">Home</a>
         <h1>Database </h1>
     </header>
-    <ol>
-        <li><a href="pages/6.html" target="_self">Lezione 6</a></li>
-    </ol>
-
+    <section>
+        <h1>Lezioni</h1>
+        <ul>
+            <li><a href="lectures/7.html" target="_self">Lezione 7</a></li>
+        </ul>
+        <ul>
+            <li><a href="lectures/8.html" target="_self">Lezione 8</a></li>
+        </ul>
+    </section>
+    <section>
+        <h1>Esercizi</h1>
+        <ul>
+            <li><a href="exercises/7.html" target="_self">Lezione 7</a></li>
+        </ul>
+        <ul>
+            <li><a href="exercises/8.html" target="_self">Lezione 8</a></li>
+        </ul>
+    </section>
 </body>
 
 </html>
