--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>
         <a class="nav-link" href="https://dbis-uibk.github.io/relax/calc/local/uibk/local/0" target="_blank">Simulatore
             RelaX</a>
-        <a class="nav-link" href="https://www.w3schools.com/sql/trysql.asp?filename=trysql_asc">Simulatore SQL</a>
+        <a class="nav-link" href="https://www.mycompiler.io/it/new/sql>Simulatore SQL</a>
         <a class="nav-link" href="../index.html" target="_self">Home</a>
         <h1>Database </h1>
     </header>
@@ -19,6 +19,9 @@
         </ul>
         <ul>
             <li><a href="lectures/8.html" target="_self">Lezione 8</a></li>
+        </ul>
+        <ul>
+            <li><a href="lectures/9.html" target="_self">Lezione 9</a></li>
         </ul>
     </section>
     <section>
