Fine prima parte lezione 1

--- a/exercises/7.html
+++ b/exercises/7.html
@@ -7,7 +7,7 @@
         <header>
             <a class="nav-link" href="https://dbis-uibk.github.io/relax/calc/local/uibk/local/0" target="_blank">Simulatore
                 RelaX</a>
-            <a class="nav-link" href="https://www.mycompiler.io/it/new/sql>Simulatore SQL</a>
+            <a class="nav-link" href="https://www.mycompiler.io/it/new/sql">Simulatore SQL</a>
             <a class="nav-link" href="../index.html" target="_self">Home</a>
             <h1>Database</h1>
         </header>
