--- a/exercises/7.html
+++ b/exercises/7.html
@@ -2,6 +2,7 @@
     <head>
         <title>Database</title>
         <link rel="stylesheet" href="../style.css">
+        <meta charset="UTF-8">
     </head>
     <body>
         <header>
