Finita prima parte lezione 10

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <ul>
             <li><a href="exercises/8.html" target="_self">Lezione 8</a></li>
         </ul>
+        <ul>
+            <li><a href="exercises/10.html" target="_self">Lezione 10</a></li>
+        </ul>
     </section>
 </body>
 
